# ai-news-agent

./: .env.example  .gitignore  deploy.sh  pyproject.toml  run_daily.sh
.github/workflows/: deploy.yml
nginx/: ai-news-dashboard.conf
src/ai_news_agent/: cli.py  config.py  db.py  digest.py  linkedin.py  preferences.py  summarizer.py
src/ai_news_agent/crawlers/: __init__.py  arxiv.py  base.py  github.py  hackernews.py  huggingface.py  microsoft.py  reddit.py  registry.py  rss.py
src/ai_news_agent/dashboard/: __init__.py  app.py
systemd/: ai-news-dashboard.service
